infra/k8s/badge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badge-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: badge
  template:
    metadata:
      labels:
        app: badge
    spec:
      containers:
        - name: badge
          image: spargens/badge

---
apiVersion: v1
kind: Service
metadata:
  name: badge
spec:
  selector:
    app: badge
  ports:
    - name: badge
      protocol: TCP
      port: 6020
      targetPort: 6020
