infra/k8s/card-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: card-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: card
  template:
    metadata:
      labels:
        app: card
    spec:
      containers:
        - name: card
          image: spargens/card

---
apiVersion: v1
kind: Service
metadata:
  name: card
spec:
  selector:
    app: card
  ports:
    - name: card
      protocol: TCP
      port: 5030
      targetPort: 5030
