infra/k8s/content-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content
  template:
    metadata:
      labels:
        app: content
    spec:
      containers:
        - name: content
          image: spargens/content

---
apiVersion: v1
kind: Service
metadata:
  name: content
spec:
  selector:
    app: content
  ports:
    - name: content
      protocol: TCP
      port: 5000
      targetPort: 5000
