infra/k8s/coupon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon
  template:
    metadata:
      labels:
        app: coupon
    spec:
      containers:
        - name: coupon
          image: spargens/coupon

---
apiVersion: v1
kind: Service
metadata:
  name: coupon-srv
spec:
  selector:
    app: coupon
  ports:
    - name: coupon
      protocol: TCP
      port: 7020
      targetPort: 7020
