infra/k8s/invitation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invitation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invitation
  template:
    metadata:
      labels:
        app: invitation
    spec:
      containers:
        - name: invitation
          image: spargens/invitation

---
apiVersion: v1
kind: Service
metadata:
  name: invitation-srv
spec:
  selector:
    app: invitation
  ports:
    - name: invitation
      protocol: TCP
      port: 6030
      targetPort: 6030
