infra/k8s/itinerary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itinerary-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itinerary
  template:
    metadata:
      labels:
        app: itinerary
    spec:
      containers:
        - name: itinerary
          image: spargens/itinerary

---
apiVersion: v1
kind: Service
metadata:
  name: itinerary
spec:
  selector:
    app: itinerary
  ports:
    - name: itinerary
      protocol: TCP
      port: 6050
      targetPort: 6050
