infra/k8s/macbease-content-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: macbease-content-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: macbease-content
  template:
    metadata:
      labels: 
        app: macbease-content
    spec:
      containers:
        - name: macbease-content
          image: spargens/macbease-content

---
apiVersion: v1
kind: Service
metadata:
  name: macbease-content
spec:
  selector:
    app: macbease-content
  ports:
  - name: macbease-content
    protocol: TCP
    port: 5070
    targetPort: 5070
