infra/k8s/map-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map
  template:
    metadata:
      labels:
        app: map
    spec:
      containers:
        - name: map
          image: spargens/map

---
apiVersion: v1
kind: Service
metadata:
  name: map
spec:
  selector:
    app: map
  ports:
    - name: map
      protocol: TCP
      port: 7050
      targetPort: 7050
