infra/k8s/memory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memory
  template:
    metadata:
      labels:
        app: memory
    spec:
      containers:
        - name: memory
          image: spargens/memory

---
apiVersion: v1
kind: Service
metadata:
  name: memory-srv
spec:
  selector:
    app: memory
  ports:
    - name: memory
      protocol: TCP
      port: 7030
      targetPort: 7030
