infra/k8s/multiverse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiverse-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiverse
  template:
    metadata:
      labels:
        app: multiverse
    spec:
      containers:
        - name: multiverse
          image: spargens/multiverse

---
apiVersion: v1
kind: Service
metadata:
  name: multiverse-srv
spec:
  selector:
    app: multiverse
  ports:
    - name: multiverse
      protocol: TCP
      port: 5020
      targetPort: 5020
