infra/k8s/refund-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: refund-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: refund
  template:
    metadata:
      labels:
        app: refund
    spec:
      containers:
        - name: refund
          image: spargens/refund

---
apiVersion: v1
kind: Service
metadata:
  name: refund
spec:
  selector:
    app: refund
  ports:
    - name: refund
      protocol: TCP
      port: 7000
      targetPort: 7000
