infra/k8s/starman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starman-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starman
  template:
    metadata:
      labels:
        app: starman
    spec:
      containers:
        - name: starman
          image: spargens/starman

---
apiVersion: v1
kind: Service
metadata:
  name: starman
spec:
  selector:
    app: starman
  ports:
    - name: starman
      protocol: TCP
      port: 7060
      targetPort: 7060
