infra/k8s/ticket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: spargens/ticket

---
apiVersion: v1
kind: Service
metadata:
  name: ticket
spec:
  selector:
    app: ticket
  ports:
    - name: ticket
      protocol: TCP
      port: 6000
      targetPort: 6000
