infra/k8s/universe-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universe-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: universe
  template:
    metadata:
      labels:
        app: universe
    spec:
      containers:
        - name: universe
          image: spargens/universe

---
apiVersion: v1
kind: Service
metadata:
  name: universe
spec:
  selector:
    app: universe
  ports:
    - name: universe
      protocol: TCP
      port: 5050
      targetPort: 5050
