infra/k8s/unsorted-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unsorted-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unsorted
  template:
    metadata:
      labels:
        app: unsorted
    spec:
      containers:
        - name: unsorted
          image: spargens/unsorted

---
apiVersion: v1
kind: Service
metadata:
  name: unsorted
spec:
  selector:
    app: unsorted
  ports:
    - name: unsorted
      protocol: TCP
      port: 6090
      targetPort: 6090
