infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          - path: /universe/socket.io
            pathType: ImplementationSpecific
            backend:
              service:
                name: universe
                port:
                  number: 5050
          - path: /universe
            pathType: Prefix
            backend:
              service:
                name: universe
                port:
                  number: 5050
          - path: /ipls
            pathType: Prefix
            backend:
              service:
                name: ipls
                port:
                  number: 5010
          - path: /multiverse
            pathType: Prefix
            backend:
              service:
                name: multiverse
                port:
                  number: 5020
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: content
                port:
                  number: 5000
          - path: /card
            pathType: Prefix
            backend:
              service:
                name: card
                port:
                  number: 5030
          - path: /resource
            pathType: Prefix
            backend:
              service:
                name: resource
                port:
                  number: 5040
          - path: /event
            pathType: Prefix
            backend:
              service:
                name: event
                port:
                  number: 5060
          - path: /bag
            pathType: Prefix
            backend:
              service:
                name: bag
                port:
                  number: 5090
          - path: /badge
            pathType: Prefix
            backend:
              service:
                name: badge
                port:
                  number: 6020
          - path: /macbeaseContent
            pathType: Prefix
            backend:
              service:
                name: macbease-content
                port:
                  number: 5070
          - path: /offer
            pathType: Prefix
            backend:
              service:
                name: offer
                port:
                  number: 5080
          - path: /quest
            pathType: Prefix
            backend:
              service:
                name: quest
                port:
                  number: 6010
          - path: /invitation
            pathType: Prefix
            backend:
              service:
                name: invitation
                port:
                  number: 6030
          - path: /project
            pathType: Prefix
            backend:
              service:
                name: project
                port:
                  number: 6040
          - path: /itinerary
            pathType: Prefix
            backend:
              service:
                name: itinerary
                port:
                  number: 6050
          - path: /joinLink
            pathType: Prefix
            backend:
              service:
                name: join-link
                port:
                  number: 6060
          - path: /tile
            pathType: Prefix
            backend:
              service:
                name: tile
                port:
                  number: 6070
          - path: /org
            pathType: Prefix
            backend:
              service:
                name: org
                port:
                  number: 6080
          - path: /unsorted
            pathType: Prefix
            backend:
              service:
                name: unsorted
                port:
                  number: 6090
          - path: /ticket
            pathType: Prefix
            backend:
              service:
                name: ticket
                port:
                  number: 6000
          - path: /refund
            pathType: Prefix
            backend:
              service:
                name: refund
                port:
                  number: 7000
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  number: 7010
          - path: /coupon
            pathType: Prefix
            backend:
              service:
                name: coupon
                port:
                  number: 7020
          - path: /memory
            pathType: Prefix
            backend:
              service:
                name: memory
                port:
                  number: 7030
          - path: /overlay
            pathType: Prefix
            backend:
              service:
                name: overlay
                port:
                  number: 7040
